betway2/src/App.css
body{  
  margin: 5px;
  overflow: hidden;
  background-color: black;
}

wrapper{
  min-height: 100vh;
  background-color: black;
}

.topcontainer
{
  margin: 10px;
}

wrapper2 {
  min-height: 100vh;
  background-color: black;
  background-image: url(https://cdn.betwaygroup.com/medusa-production/1001/the-hunch-mobile.webp);
  background-repeat: no-repeat;
  background-position:top;
  background-size:cover;
}

.daHeader{
  background-color: gray;
}

#canvas {
    min-height: 100%;
}

#mainstage {
    overflow: auto;
}


#footer 
{
    left: 0;
    bottom: 0;
    width: 100%;
    clear: both;
    height: 150px;
    margin-top: -151px;
    font-size: 16;
    text-rendering: auto;
    position: fixed;

    background-repeat: no-repeat;
    background-attachment: fixed;

    opacity: 1;
    background-color: rgba(0, 0, 0,0.7);
    z-index: 1000;
}

.FooterItem1
{
  display: flex;
  align-items: center;
  margin: auto;
  font-size: medium;
  color:aliceblue;

}

.FooterItem2
{
  display: flex;
  align-items: center;
  margin: auto;
  font-size: x-large;
  font-weight: bold;
  color:aliceblue;
}

.FooterItem3
{
  display: flex;
  align-items: center;
  margin: auto;
  font-size: large;
  font-weight: bold;
  color:aliceblue;
}

.FooterItem3Button
 {
  width: 300px;
 }

.nav-tabs .nav-item .nav-link 
{
  /*
  background-color:rgb(18, 22, 22);
  color: #FFF;
  */
}


.nav-tabs > .active > a,.nav-tabs > .active > a:hover,
.nav-tabs > li > a:hover 
{
  /*
 text-decoration: none;
  font-weight: bold;
  border-radius:0px;
  border-bottom-width: 4px;
  border-bottom-style: solid;
  border-bottom-color: green;
  */
}

 .nav-tabs > li > a{
 border-radius:0px;
  }


p 
{
    margin-left: 40px;
    margin-right: 80px;
}



/*Start of teh Old StyleSheet */




.App {

}

.container
{
width: 1000px;
height: 1000px;
border: 10px;
border-style: solid;

display: flex;
align-items: flex-start;
flex: 1;

}

.row
{
height: 400px;
width: 40px;
border-style:dashed;
}

.div
{

  border-style: dashed;
  border-color: black;
  background-color: red;
}


.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}


.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}


.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

